@@ -30,16 +30,6 @@ CGUIDialogKaiToast::~CGUIDialogKaiToast(void)
   DeleteCriticalSection(&m_critical);
 }
 
-bool CGUIDialogKaiToast::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 bool CGUIDialogKaiToast::OnMessage(CGUIMessage& message)
 {
   switch ( message.GetMessage() )
