@@ -16,7 +16,6 @@ public:
   void SetHeading(const wstring& strLine);
   void SetHeading(const string& strLine);
   void SetHeading(int iString);
-  virtual bool OnAction(const CAction &action);
 protected:
   bool m_bConfirmed;
 
