@@ -8,6 +8,5 @@ public:
   CGUIDialogPlayerControls(void);
   virtual ~CGUIDialogPlayerControls(void);
 
-  virtual bool OnAction(const CAction &action);
   virtual void Render();
 };
