@@ -9,7 +9,6 @@ public:
   CGUIWindowVideoInfo(void);
   virtual ~CGUIWindowVideoInfo(void);
   virtual bool OnMessage(CGUIMessage& message);
-  virtual bool OnAction(const CAction &action);
   virtual void Render();
   void SetMovie(CIMDBMovie& movie);
   bool NeedRefresh() const;
